--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "plwordnet>=0.1.5",
     "praw>=7.8.1",
     "python-dotenv>=1.1.0",
+    "scikit-learn>=1.6.1",
     "wordcloud>=1.9.4",
     "wykop-sdk-reloaded>=0.7.0",
 ]
